# shellstation

./: .gitattributes  .gitignore  .prettierignore  ADMIN_GUIDE.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  DEVELOPMENT.md  README.md  RELEASING.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.claude/agents/: code-reviewer.md  security-auditor.md
.forgejo/workflows/: release.yml
src/: App.css  App.tsx  highlightEngine.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260324000001_create_folders.sql  20260324000001_create_schema.sql  20260324000002_create_sessions.sql  20260324000003_create_credentials.sql  20260324000004_add_credential_secret.sql  20260324000005_add_session_icon.sql  20260324000006_add_sort_order.sql  20260328000001_add_credential_username.sql  20260409000001_create_highlight_profiles.sql  20260414000001_credential_profiles.sql  20260414000002_legacy_algorithms.sql  20260416000001_add_owner_visibility.sql  20260422000001_login_sequences.sql
src-tauri/src/: config.rs  highlight.rs  lib.rs  login_sequence.rs  main.rs  migrate_legacy.rs  session_logger.rs
src-tauri/src/commands/: credential_profile.rs  database.rs  highlight.rs  logging.rs  login_sequence.rs  mod.rs  pty.rs  session.rs  session_credentials.rs  session_login_sequences.rs  ssh.rs  telnet.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/db/: mod.rs  models.rs  postgres.rs  sqlite.rs
src-tauri/src/import/: mod.rs  mremoteng.rs  securecrt.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/telnet/: mod.rs
src/components/: BulkEditDialog.tsx  CommandBar.tsx  CommandButtonDialog.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CredentialManager.tsx  CustomSelect.tsx  DatabaseStatusBanner.tsx  FolderCredentialDialog.tsx  FolderDialog.tsx  FolderLoginSequenceDialog.tsx  HighlightProfileDialog.tsx  HostVerifyDialog.tsx  KbdInteractiveDialog.tsx  LoginSequenceManager.tsx  MoveDialog.tsx  PasteConfirmDialog.tsx  QuickConnect.tsx  SessionDialog.tsx  SessionIcons.tsx  SessionSidebar.tsx  SessionTree.tsx  SettingsDialog.tsx  Terminal.tsx  TerminalTabs.tsx  ToastContainer.tsx  UserIdentDialog.tsx
src/hooks/: useEnterKey.ts  useEscapeKey.ts  useTheme.ts
src/i18n/: index.ts
src/locales/de/: translation.json
src/locales/en/: translation.json
src/locales/es/: translation.json
src/locales/fr/: translation.json
src/locales/it/: translation.json
src/locales/ja/: translation.json
src/locales/ko/: translation.json
src/locales/nl/: translation.json
src/locales/pl/: translation.json
src/locales/pt/: translation.json
src/locales/ru/: translation.json
src/locales/sv/: translation.json
src/locales/tr/: translation.json
src/locales/zh/: translation.json
src/stores/: appStore.ts  credentialProfilesStore.ts  highlightStore.ts  loginSequenceStore.ts  sessionStore.ts  settingsStore.ts  terminalStore.ts  toastStore.ts
ssh-testlab/: .gitignore  Dockerfile  Dockerfile.cisco  Dockerfile.telnet  README.md  docker-compose.yml  setup.sh  ssh_config.example
ssh-testlab/configs/: jumphost_sshd_config  target_sshd_config
ssh-testlab/scripts/: entrypoint-telnet.sh  entrypoint.sh  fake_cisco.sh
tools/: add_translations.py  generate_icon.py  generate_test_data.py
tools/highlight_profiles/: cisco.ini  linux.ini
