[package]
name = "shellstation"
version = "0.1.0"
description = "Cross-Platform Terminal Manager & SSH Client"
authors = ["LuminaApps"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shellstation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.45"
russh-keys = "0.45"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
keyring = "3"
uuid = { version = "1", features = ["v4", "serde"] }
portable-pty = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dirs = "6"

[profile.release]
strip = true        # Strip debug symbols
lto = true          # Link-time optimization (slower build, smaller binary)
codegen-units = 1   # Single codegen unit (slower build, better optimization)
opt-level = "s"     # Optimize for size over speed
