[package]
name = "shellstation"
version = "0.9.1"
description = "Cross-Platform Terminal Manager & SSH Client"
authors = ["LuminaApps"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shellstation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# russh pulls in the `rsa` crate which has an open advisory (RUSTSEC-2023-0071,
# Marvin Attack: RSA PKCS#1 v1.5 decryption timing side-channel). This only
# affects the decrypting party (i.e. an SSH server). ShellStation is purely an
# SSH client — it signs with RSA keys but never decrypts — so the vulnerable
# code path is not reachable here. No upstream fix exists as of 2026-04.
russh = "0.45"
russh-keys = "0.45"
# default-features disabled to exclude sqlx-mysql, which is unused and
# otherwise pulls in the `rsa` crate (see RUSTSEC-2023-0071 above).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "uuid", "chrono", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["crypto-rust"] }
uuid = { version = "1", features = ["v4", "serde"] }
portable-pty = "0.9.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"
dirs = "6"
sha2 = "0.11.0"
zeroize = { version = "1", features = ["serde"] }
tauri-plugin-dialog = "2.6.0"
quick-xml = "0.39.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native", "crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[profile.release]
strip = true        # Strip debug symbols
lto = true          # Link-time optimization (slower build, smaller binary)
codegen-units = 1   # Single codegen unit (slower build, better optimization)
opt-level = "s"     # Optimize for size over speed
